[package]
name = "rhyolite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
twilight-model = "0.15.4"
url = "2.5.0"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
dashmap = "5.5.3"
